--- a/src/main/resources/com/example/demo1/hello-view.fxml
+++ b/src/main/resources/com/example/demo1/hello-view.fxml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.demo1.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<VBox xmlns="http://javafx.com/javafx/17"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.example.demo1.controller.DashboardController"
+      spacing="10" padding="10">
+    <children>
+        <TextField fx:id="interestInput" promptText="Enter your interest (e.g. education, health)"/>
+        <Button fx:id="searchButton" text="Search"/>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+        <TableView fx:id="resultsTable" prefHeight="400">
+            <columns>
+                <TableColumn fx:id="nameColumn" text="Name" prefWidth="150"/>
+                <TableColumn fx:id="categoryColumn" text="Category" prefWidth="100"/>
+                <TableColumn fx:id="descriptionColumn" text="Description" prefWidth="400"/>
+            </columns>
+        </TableView>
+    </children>
 </VBox>
